# mcstats-backend

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yaml  run.sh  test.json
.github/workflow/: release.yaml
.github/workflows/: codeql.yml  release.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20240409_000001_create_initial_tables.rs  main.rs
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2026-04-07-202708-0000_create_stats/: down.sql  up.sql
src/: api_docs.rs  config.rs  database.rs  db.rs  lib.rs  main.rs  models.rs  mojang_utils.rs  schema.rs  server.rs  stat_file.rs  syncer.rs
src/database/: category.rs  connection.rs  items.rs  mod.rs  player.rs  populate.rs  stats.rs
src/entities/: items.rs  mod.rs  player.rs  player_stats.rs  players.rs  prelude.rs  stat_categories.rs
src/graphql/: mod.rs  types.rs
src/server/: categories.rs  helpers.rs  items.rs  mod.rs  players.rs  run_server.rs  server.rs
world/: usercache.json
world/stats/: 2e714d0e-4b93-402c-8ff0-b477d2fa9004.json  590ef0b5-26d9-4cfc-a6db-30974676964a.json  8db9a17b-5e7e-451a-b653-60fa3ba03415.json  9184df86-8594-4700-8594-2db0b9d33446.json  baaef355-3f22-457d-93e0-99b62e8e549c.json  fc541cf6-edf5-42a2-8b96-40413a2f9f33.json
