[package]
name = "minecraft-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
diesel = { version = "2.3.0", features = ["uuid"] }
diesel-async = { version = "0.8.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
