[package]
name = "minecraft-stats"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "syncer"
path = "src/bin/syncer.rs"

[[bin]]
name = "endpoint"
path = "src/bin/endpoint.rs"

[dependencies]
anyhow = "1.0.102"
diesel = { version = "2.3.0", features = ["uuid"] }
diesel-async = { version = "0.8.0", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
futures = "0.3.32"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
utoipa = { version = "5.4.0", features = ["uuid"] }
utoipa-gen = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
