[package]
name = "mcstats-backend"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
futures = "0.3.32"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
sea-orm = { version = "1.1", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "mock",
] }
sea-orm-macros = "1.1"
async-graphql = "7.0"
async-graphql-axum = "7.0"

[dependencies.migration]
path = "migration"
