[package]
name = "migration"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }
sea-orm = { version = "1.1", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx-sqlite = "0.8"
